--- a/README.adoc
+++ b/README.adoc
@@ -89,7 +89,7 @@ values?  For example:
 [source,clojure]
 ----
 (-> 1
-    (inc)
+    (inc)       ; want to print value in pipeline after "(inc)" expression
     (* 2))
 4
 ----
@@ -97,19 +97,21 @@ Suppose you want to disply the value after the `(inc)` function. You can't just 
 `(println ...)` because the return value of `nil` will break the pipeline structure. Instead,
 just use `spy`:
 
-
 [source,clojure]
 ----
 (-> 1
     (inc)
-    (spy)       ; want to print value at this location in pipeline
+    (spy)       ; print value at this location in pipeline
     (* 2))
 ;; spy => 2     ; output from spy
 4               ; return value from the threading pipeline
 ----
+This tool is named `spy` since it can display values from inside any threading form without
+affecting the result of the expression.  In this case, `spy` printed the value `2` resulting from
+the `(inc)` expression. Then, the value `2` continued to flow through the following expressions in
+the pipeline so that the return value of the expression is unchanged.  
 
 You can add in a string message to label each `spy` output:
-
 [source,clojure]
 ----
 (-> 1
@@ -119,8 +121,8 @@ You can add in a string message to label each `spy` output:
 ;; after inc => 2               ; spy output is labelled with message
 4                               ; return value is unchanged
 ----
-This tool is named `spy` since it can display values from inside either  a "thread-first" or a "thread-last" form
-(e.g. using `\->` or `\->>`) where they would normally be hidden.  
+Note that `spy` works equally well inside either a "thread-first" or a "thread-last" form
+(e.g. using `\->` or `\->>`), without requiring any changes.
 
 [source,clojure]
 ----
@@ -132,12 +134,10 @@ This tool is named `spy` since it can display values from inside either  a "thre
 4
 ----
 
-Note that the same call to `spy` works in either `\->` or `\->>` forms.  The
-keyword `:msg` is required just before the message string, as it is this which
-allows the `spy` function to detect whether it is in a thread-first or
-thread-last form, and thus produce the correct output. As a bonus for debugging,
-the value is output using (pr-str ...) so that numbers and strings are
-unambiguous in the output:
+How does `spy` accomplish this trick? The answer is that the keyword `:msg` is required just before
+the message string, and it is this which allows `spy` to detect whether it is in a thread-first or
+thread-last form, and thus produce the correct output. As a bonus for debugging, the value is output
+using (pr-str ...) so that numbers and strings are unambiguous in the output:
 
 [source,clojure]
 ----
@@ -157,7 +157,7 @@ unambiguous in the output:
 ----
 
 Sometimes you may prefer to print out the literal expression instead of a
-message. In this case, just use `spyx`:
+message. In this case, just use `spyx` (short for "spy expressions") :
 [source,clojure]
 ----
 (as-> 1 x
@@ -166,24 +166,25 @@ message. In this case, just use `spyx`:
 ;; (inc x) => 2         ; the expression is used as the label
 4
 ----
-
-In other instances, you may wish to use `spyxx` display both the type and value of an expression:
+In other instances, you may wish to use `spyxx` to display the expression, its 
+type, and its value:
 [source,clojure]
 ----
 (defn mystery-fn [] (into (sorted-map) {:b 2 :a 1}))
 (spyxx (mystery-fn))
 ;; (mystery-fn) => clojure.lang.PersistentTreeMap->{:a 1, :b 2}
 ----
+Non-pure functions (i.e. those with side-effects) are safe to use with `spy`.
+Any expression supplied to spy will be evaluated only once.
 
-To be precise, the function signatures are:
-
+To be precise, the function signatures for `spy` are:
 [source,clojure]
 ----
-(spy <value>)                   ; print <value> w/o custom message string
-(spy <value> :msg msg-str)      ; works with ->   (the ":msg" keyword is required)
-(spy :msg msg-str <value>)      ; works with ->>  (the ":msg" keyword is required)
-(spyx  <expr>)                  ; prints <expr> and its value
-(spyxx <expr>)                  ; prints <expr>, its type, and its value
+(spy <expr>)                ; print value of <expr> w/o custom message string
+(spy <expr> :msg msg-str)   ; works with ->   (the ":msg" keyword is required)
+(spy :msg msg-str <expr>)   ; works with ->>  (the ":msg" keyword is required)
+(spyx  <expr>)              ; prints <expr> and its value
+(spyxx <expr>)              ; prints <expr>, its type, and its value
 ----
 
 === Literate Threading Macro
