--- a/src/tupelo/datomic.adoc
+++ b/src/tupelo/datomic.adoc
@@ -171,17 +171,19 @@ This points out an *_important_* conceptual point regarding Datomic:
 
 ==== The Datomic Conceptual Model:
 
-[big]#*_Datomic is conceptually structured as a simple map, where each key is an EID, and
-each value is a map of attribute-value pairs._*#
+[big]#*_Datomic is conceptually structured as a collection of simple maps, each of which has a unique :eid
+value and an arbitrary collection of attribute-value pairs._*#
 
 A Clojure example equivalent to the above would look like:
 
 [source,clojure]
 ----
-; <EID>    <---------- Map of Attribute-Value Pairs -------------------------------------->
-{  1001    { :person/name "James Bond"    :location "London"      ... :person/secret-id 7 }
-   1002    { :person/name "M"             :location "London"      ...                     }
-   1003    { :person/name "Dr No"         :location "Caribbean"   ...                     } }
+[
+;  <----------------- Maps of Attribute-Value Pairs --------------------------------------->
+   { :eid 1001  :person/name "James Bond"  :location "London"     ...  :person/secret-id 7 }
+   { :eid 1002  :person/name "M"           :location "London"     ...                      }
+   { :eid 1003  :person/name "Dr No"       :location "Caribbean"  ...                      }
+]
 ----
 
 except that the _actual_ EID values are randomly assigned by the Datomic Transactor; we only know
