--- a/README.adoc
+++ b/README.adoc
@@ -6,7 +6,8 @@ Leiningen coordinates:
 
 image:http://clojars.org/tupelo/latest-version.svg[ http://clojars.org/tupelo ]
 
-=== Full API Documentation:  http://cloojure.github.io/doc/tupelo
+=== http://cloojure.github.io/doc/tupelo[The Tupelo-Datomic API Docs] 
+are posted on GitHub Pages.
 
 == Tupelo Overview
 
