--- a/README.adoc
+++ b/README.adoc
@@ -669,6 +669,37 @@ higher-order-function is required:
               (= 2 num-false) )))))
 ----
 
+=== Keeping `nil` Simple (& Obvious)
+
+Clojure has the build-in function `some` to return the first truthy _value_ from a _sequence_
+argument. It also has the poorly named function `some?` which returns a literal `true` if a _scalar_
+argument satisfies `(not (nil? arg))`. It is easy to confuse these two functions, not only in their
+return type but also
+
+Clojure 
+
+[source,clojure]
+----
+(let [data [true :a 'my-symbol 1 "hello" \x false nil] ]
+  (testing "basic usage"
+    (let [notties   (keep-if not-nil? data)
+          nillies   (drop-if not-nil? data) ]
+      (is (and  (= notties [true :a 'my-symbol 1 "hello" \x false] )
+                (= nillies [nil] )))
+      (is (every?   not-nil? notties))
+      (is (every?       nil? [nil] ))
+      (is (not-any?     nil? notties))
+      (is (not-any? not-nil? nillies))))
+
+  (testing "improved usage"
+    (let [count-if (comp count keep-if) ]
+      (let [num-invalid     (count-if nil?     data)
+            num-valid-1     (count-if some?    data)    ; awkward phrasing, doesn't feel natural
+            num-valid-2     (count-if not-nil? data) ]  ; matches intent much better
+        (is (and  (= 7 num-valid-1 num-valid-2 )
+                  (= 1 num-invalid) ))))))
+----
+
 === Identifying Sequences
 
 In some situations, a function may need to verify that an argument is _seqable_, that is, that it
