--- a/README.adoc
+++ b/README.adoc
@@ -677,28 +677,24 @@ argument satisfies `(not (nil? arg))`. It is easy to confuse these two functions
 return type but also in the argument they accept (sequence or scalar).  In keeping with the style
 for other basic test functions, we provide the function `not-nil?` as the opposite of `nil?`.
 
-Clojure 
-
 [source,clojure]
 ----
 (let [data [true :a 'my-symbol 1 "hello" \x false nil] ]
-  (testing "basic usage"
-    (let [notties   (keep-if not-nil? data)
-          nillies   (drop-if not-nil? data) ]
-      (is (and  (= notties [true :a 'my-symbol 1 "hello" \x false] )
-                (= nillies [nil] )))
-      (is (every?   not-nil? notties))
-      (is (every?       nil? [nil] ))
-      (is (not-any?     nil? notties))
-      (is (not-any? not-nil? nillies))))
+  (let [notties   (keep-if not-nil? data)
+        nillies   (drop-if not-nil? data) ]
+    (is (and  (= notties [true :a 'my-symbol 1 "hello" \x false] )
+              (= nillies [nil] )))
+    (is (every?   not-nil? notties))
+    (is (every?       nil? nillies))
+    (is (not-any?     nil? notties))
+    (is (not-any? not-nil? nillies)))
 
-  (testing "improved usage"
-    (let [count-if (comp count keep-if) ]
-      (let [num-invalid     (count-if nil?     data)
-            num-valid-1     (count-if some?    data)    ; awkward phrasing, doesn't feel natural
-            num-valid-2     (count-if not-nil? data) ]  ; matches intent much better
-        (is (and  (= 7 num-valid-1 num-valid-2 )
-                  (= 1 num-invalid) ))))))
+  (let [count-if (comp count keep-if) ]
+    (let [num-invalid     (count-if nil?     data)
+          num-valid-1     (count-if some?    data)    ; awkward phrasing, doesn't feel natural
+          num-valid-2     (count-if not-nil? data) ]  ; matches intent much better
+      (is (and  (= 7 num-valid-1 num-valid-2 )
+                (= 1 num-invalid) )))))
 ----
 
 === Identifying Sequences
