--- a/README.adoc
+++ b/README.adoc
@@ -374,9 +374,10 @@ combine like collections together into a result collection of the same type:
 [source,clojure]
 ----
 ; Glues together like collections:
-(is (= (glue [ 1 2] [ 3 4] [ 5 6] )     [ 1 2 3 4 5 6 ]  ))
-(is (= (glue {:a 1} {:b 2} {:c 3} )     {:a 1 :c 3 :b 2} ))
-(is (= (glue #{1 2} #{3 4} #{6 5} )    #{ 1 2 6 5 3 4 }  ))
+(is (= (glue [ 1 2] [ 3 4] [ 5 6] )       [ 1 2 3 4 5 6 ]  ))
+(is (= (glue {:a 1} {:b 2} {:c 3} )       {:a 1 :c 3 :b 2} ))
+(is (= (glue #{1 2} #{3 4} #{6 5} )      #{ 1 2 6 5 3 4 }  ))
+(is (= (glue "I" " like " \a " nap!" )   "I like a nap!"   ))
 
 ; If you want to convert to a sorted set or map, just put an empty one first:
 (is (= (glue (sorted-map) {:a 1} {:b 2} {:c 3})   {:a 1 :b 2 :c 3} ))
@@ -389,6 +390,7 @@ the same type. The allowable input types are:
   - mixed lists & vectors
   - all maps (sorted or not)
   - all sets (sorted or not)
+  - mixed strings & characters
 
 === Adding Values to the Beginning or End of a Sequence
 
