--- a/README.adoc
+++ b/README.adoc
@@ -512,9 +512,38 @@ expression to make these tests a snap:
           { :a 1 :b nil     } )   ;=> true
 (matches? [1 _ 3] [1 2 3] )       ;=> true
 ----
-Note that a wildcald can match either a primitive or a composite value. It works for both maps
+Note that a wildcard can match either a primitive or a composite value. It works for both maps
 and vectors. The only restriction is that the wildcard symbol `_` (underscore) cannot be used as
 a key in the pattern-map (it can be used anywhere in a vector-pattern)."
+
+=== Fast & Simple Wild-Card Matches
+
+Sometimes using `core.match` is overkill. For some patterns & values it can run very slowly or even
+create a stack overflow exception.  For most cases, all you really need is a simple wildcard match.
+
+The `wild-match?` function returns `true` if a pattern is matched by one or more values.  The special
+keyword `:*` (colon-star) in the pattern serves as a wildcard value.  Note that a wildcard can match
+either a primitive or a composite value: Usage:
+
+[source,clojure]
+----
+(wild-match? pattern & values)
+----
+
+Samples:
+[source,clojure]
+----
+(wild-match?  {:a :* :b 2} 
+              {:a 1  :b 2})         ;=> true
+
+(wild-match?  [1 :* 3]
+              [1 2  3]
+              [1 9  3] ))           ;=> true
+
+(wild-match?  {:a :*       :b 2} 
+              {:a [1 2 3]  :b 2})   ;=> true
+----
+
 
 === Map Entries (Key-Value pairs)
 
