--- a/README.adoc
+++ b/README.adoc
@@ -463,10 +463,10 @@ s/defn insert-at :- ts/List
    elem     :- s/Any]
   ...)
 
-(is (= [9]     (insert-at [] 0 9)))
+(is (= [9] (insert-at [] 0 9)))
 
-(is (= [9 0]   (insert-at [0] 0 9)))
-(is (= [0 9]   (insert-at [0] 1 9)))
+(is (= [9 0] (insert-at [0] 0 9)))
+(is (= [0 9] (insert-at [0] 1 9)))
 
 (is (= [9 0 1] (insert-at [0 1] 0 9)))
 (is (= [0 9 1] (insert-at [0 1] 1 9)))
@@ -475,6 +475,33 @@ s/defn insert-at :- ts/List
 
 As with `assoc`, you are allowed to insert the new element into the first empty slot after all
 existing elements, but no further.  `insert-at` will throw an exception for invalid values of `index`.
+
+=== Replacing Values in a Sequence
+
+And, of course, you can also replace an element in a sequence:
+
+[source,clojure]
+----
+(s/defn replace-at :- ts/List
+  "Replaces an element in a collection at the specified index."
+  [coll     :- ts/List
+   index    :- s/Int
+   elem     :- s/Any]
+   ...)
+
+(is (= [9] (replace-at (range 1) 0 9)))
+
+(is (= [9 1] (replace-at (range 2) 0 9)))
+(is (= [0 9] (replace-at (range 2) 1 9)))
+
+(is (= [9 1 2 3 4] (replace-at (range 5) 0 9)))
+(is (= [0 9 2 3 4] (replace-at (range 5) 1 9)))
+(is (= [0 1 9 3 4] (replace-at (range 5) 2 9)))
+(is (= [0 1 2 9 4] (replace-at (range 5) 3 9)))
+(is (= [0 1 2 3 9] (replace-at (range 5) 4 9)))
+----
+
+As with `drop-at`, `replace-at` will throw an exception for invalid values of `index`.
 
 === Convenience in Testing Seq's
 
